[tool.poetry]
name = "typer-passwd"
version = "0.1.0"
description = "Simple CLI app that generates random passwords."
authors = ["Mrnobody <mrcartoonster@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.0"}
typer-cli = {git = "https://github.com/mrcartoonster/typer-cli"}
colorful = "^0.5.4"
yakutils = "^1.7.0"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-emoji = "^0.2.0"
pytest-picked = "^0.4.4"
pytest-instafail = "^0.4.2"
pygments = "^2.6.1"
ipython = "^7.16.1"
pre-commit = "^2.6.0"
interrogate = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
